Addded networking basic code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,9 @@ ADD_LIBRARY(protobuf_all ${ProtoSource})
 TARGET_LINK_LIBRARIES(protobuf_all ${PROTOBUF_LIBRARIES})
 
 SET(target server)
-ADD_EXECUTABLE(${target} src/server.cpp)
+ADD_EXECUTABLE(${target} src/server_main.cpp)
+TARGET_LINK_LIBRARIES(${target} protobuf_all)
+
+SET(target client)
+ADD_EXECUTABLE(${target} src/client_main.cpp)
 TARGET_LINK_LIBRARIES(${target} protobuf_all)
